--- a/addons/mail/push-to-talk-extension/manifest.json
+++ b/addons/mail/push-to-talk-extension/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Discuss Push-to-talk",
-    "description": "Empowers Calypso Discuss with system-wide Push-to-Talk",
+    "description": "Empowers HaliBlu Discuss with system-wide Push-to-Talk",
     "version": "1.0.0.2",
     "permissions": [
         "storage"
